deploy: 9bbb4c3aeba1755197a67655f9f2710f235b4fa9

--- a/about/index.html
+++ b/about/index.html
@@ -8,22 +8,22 @@ Consectetur incididunt labore exercitation id. Excepteur mollit qui eiusmod null
 <meta property="og:description" content="Cupidatat veniam ut adipisicing consectetur eu reprehenderit excepteur cupidatat amet. Est reprehenderit ad elit veniam commodo consectetur in eiusmod magna. Dolor incididunt excepteur anim ipsum. Laborum ipsum voluptate ullamco veniam duis duis. Dolore incididunt sunt in eu sint ex excepteur excepteur. Dolor non aute consectetur elit non Lorem ullamco fugiat.
 Consectetur incididunt labore exercitation id. Excepteur mollit qui eiusmod nulla qui nulla duis amet quis in ipsum dolor. Quis tempor ea excepteur eiusmod culpa eiusmod sunt labore sit commodo quis velit exercitation aliqua.">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://example.org/about/"><meta property="article:section" content>
+<meta property="og:url" content="https://uo258425.github.io/about/"><meta property="article:section" content>
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="About">
 <meta name=twitter:description content="Cupidatat veniam ut adipisicing consectetur eu reprehenderit excepteur cupidatat amet. Est reprehenderit ad elit veniam commodo consectetur in eiusmod magna. Dolor incididunt excepteur anim ipsum. Laborum ipsum voluptate ullamco veniam duis duis. Dolore incididunt sunt in eu sint ex excepteur excepteur. Dolor non aute consectetur elit non Lorem ullamco fugiat.
 Consectetur incididunt labore exercitation id. Excepteur mollit qui eiusmod nulla qui nulla duis amet quis in ipsum dolor. Quis tempor ea excepteur eiusmod culpa eiusmod sunt labore sit commodo quis velit exercitation aliqua.">
-<script src=http://example.org/js/feather.min.js></script>
-<link href=http://example.org/css/fonts.b685ac6f654695232de7b82a9143a46f9e049c8e3af3a21d9737b01f4be211d1.css rel=stylesheet>
-<link rel=stylesheet type=text/css media=screen href=http://example.org/css/main.2f9b5946627215dc1ae7fa5f82bfc9cfcab000329136befeea5733f21e77d68f.css>
-<link id=darkModeStyle rel=stylesheet type=text/css href=http://example.org/css/dark.726cd11ca6eb7c4f7d48eb420354f814e5c1b94281aaf8fd0511c1319f7f78a4.css disabled>
+<script src=https://uo258425.github.io/js/feather.min.js></script>
+<link href=https://uo258425.github.io/css/fonts.b685ac6f654695232de7b82a9143a46f9e049c8e3af3a21d9737b01f4be211d1.css rel=stylesheet>
+<link rel=stylesheet type=text/css media=screen href=https://uo258425.github.io/css/main.2f9b5946627215dc1ae7fa5f82bfc9cfcab000329136befeea5733f21e77d68f.css>
+<link id=darkModeStyle rel=stylesheet type=text/css href=https://uo258425.github.io/css/dark.726cd11ca6eb7c4f7d48eb420354f814e5c1b94281aaf8fd0511c1319f7f78a4.css disabled>
 </head>
 <body>
 <div class=content><header>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FEECJHX7WT"></script>
 <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-FEECJHX7WT')</script>
 <div class=main>
-<a href=http://example.org/>Manrique.dev</a>
+<a href=https://uo258425.github.io/>Manrique.dev</a>
 </div>
 <nav>
 <a href=/>Home</a>
@@ -31,7 +31,7 @@ Consectetur incididunt labore exercitation id. Excepteur mollit qui eiusmod null
 <a href=/about>About</a>
 <a href=/tags>Tags</a>
 | <a id=dark-mode-toggle onclick=toggleTheme() href></a>
-<script src=http://example.org/js/themetoggle.js></script>
+<script src=https://uo258425.github.io/js/themetoggle.js></script>
 </nav>
 </header>
 <main>
