--- a/index.html
+++ b/index.html
@@ -1,58 +1,11 @@
-<!doctype html><html>
-<head>
-<meta name=generator content="Hugo 0.88.1">
-<meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge"><title>Manrique.dev | Home </title><link rel=icon type=image/png href=/favicon.png><meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=description content>
-<meta property="og:image" content>
-<link rel=alternate type=application/rss+xml href=https://manrique.dev/index.xml title=Manrique.dev>
-<meta property="og:title" content="Manrique.dev">
-<meta property="og:description" content>
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://manrique.dev/">
-<meta name=twitter:card content="summary">
-<meta name=twitter:title content="Manrique.dev">
-<meta name=twitter:description content>
-<script src=https://manrique.dev/js/feather.min.js></script>
-<link href=https://manrique.dev/css/fonts.b685ac6f654695232de7b82a9143a46f9e049c8e3af3a21d9737b01f4be211d1.css rel=stylesheet>
-<link rel=stylesheet type=text/css media=screen href=https://manrique.dev/css/main.f7cca4a6b4033b583a13d5ce5a769be8886ea0fa1eb261f48f400fdfecf9f79b.css>
-<link id=darkModeStyle rel=stylesheet type=text/css href=https://manrique.dev/css/dark.726cd11ca6eb7c4f7d48eb420354f814e5c1b94281aaf8fd0511c1319f7f78a4.css disabled>
-</head>
-<body>
-<div class=content>
-<header>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FEECJHX7WT"></script>
-<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-FEECJHX7WT')</script>
-<div class=main>
-<a href=https://manrique.dev/>Manrique.dev</a>
-</div>
-<nav>
-<a href=/>Home</a>
+<!doctype html><html><head><meta name=generator content="Hugo 0.96.0"><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><title>Manrique.dev | Home</title><link rel=icon type=image/png href=/favicon.png><meta name=viewport content="width=device-width,initial-scale=1"><meta name=description content><meta property="og:image" content><link rel=alternate type=application/rss+xml href=https://manrique.dev/index.xml title=Manrique.dev><meta property="og:title" content="Manrique.dev"><meta property="og:description" content><meta property="og:type" content="website"><meta property="og:url" content="https://manrique.dev/"><meta name=twitter:card content="summary"><meta name=twitter:title content="Manrique.dev"><meta name=twitter:description content><script src=https://manrique.dev/js/feather.min.js></script>
+<link href=https://manrique.dev/css/fonts.b685ac6f654695232de7b82a9143a46f9e049c8e3af3a21d9737b01f4be211d1.css rel=stylesheet><link rel=stylesheet type=text/css media=screen href=https://manrique.dev/css/main.f7cca4a6b4033b583a13d5ce5a769be8886ea0fa1eb261f48f400fdfecf9f79b.css><link id=darkModeStyle rel=stylesheet type=text/css href=https://manrique.dev/css/dark.726cd11ca6eb7c4f7d48eb420354f814e5c1b94281aaf8fd0511c1319f7f78a4.css disabled></head><body><div class=content><header><script async src="https://www.googletagmanager.com/gtag/js?id=G-FEECJHX7WT"></script>
+<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag("js",new Date),gtag("config","G-FEECJHX7WT")</script><div class=main><a href=https://manrique.dev/>Manrique.dev</a></div><nav><a href=/>Home</a>
 <a href=/posts>All posts</a>
 <a href=/about>About</a>
 <a href=/cv>CV</a>
 <a href=/tags>Tags</a>
 | <a id=dark-mode-toggle onclick=toggleTheme() href></a>
-<script src=https://manrique.dev/js/themetoggle.js></script>
-</nav>
-</header>
-<main class=list>
-<div class=site-description><p>Carlos Manrique Enguita - Software Engineer</p></div>
-<section class=list-item>
-<h1 class=title><a href=/posts/primer-post/>Primer Post</a></h1>
-<time>Oct 31, 2021</time>
-<br><div class=description>
-Table Of Contents bla bla bla bla hola mundo
-bla bla Esse nisi proident sunt enim nisi duis commodo. Culpa pariatur sint nisi do reprehenderit sit et esse pariatur culpa do occaecat elit ad. Et nostrud id deserunt cillum nostrud ipsum eu commodo nisi aliquip excepteur in consectetur sit. Eu laborum culpa veniam esse incididunt officia est irure eu esse dolore dolore deserunt qui. Ut ex aliqua nisi anim aliquip ullamco consectetur voluptate.&mldr;
-</div>
-<a href=/posts/primer-post/>Read more ⟶</a>
-</section>
-</main>
-<footer>
-<hr><a class=soc href=https://github.com/UO258425 title=GitHub><i data-feather=github></i></a>|<a class=soc href=https://www.linkedin.com/in/carlos-manrique-enguita/ title=LinkedIn><i data-feather=linkedin></i></a>|<a class=soc href=mailto:cmanriqueenguita@gmail.com title=Mail><i data-feather=mail></i></a>|<a class=soc href=mailto:UO258425@uniovi.es title=Mail><i data-feather=mail></i></a>|<a class=soc href=mailto:carlos@manrique.dev title=Mail><i data-feather=mail></i></a>|⚡️
-2021 © Carlos Manrique Enguita | <a href=https://github.com/athul/archie>Archie Theme</a> | Built with <a href=https://gohugo.io>Hugo</a>
-</footer>
-<script>feather.replace()</script>
-</div>
-</body>
-</html>
+<script src=https://manrique.dev/js/themetoggle.js></script></nav></header><main class=list><div class=site-description><p>Carlos Manrique Enguita - Software Engineer</p></div><section class=list-item><h1 class=title><a href=/posts/primer-post/>Primer Post</a></h1><time>Oct 31, 2021</time><br><div class=description>Table Of Contents bla bla bla bla hola mundo
+bla bla Esse nisi proident sunt enim nisi duis commodo. Culpa pariatur sint nisi do reprehenderit sit et esse pariatur culpa do occaecat elit ad. Et nostrud id deserunt cillum nostrud ipsum eu commodo nisi aliquip excepteur in consectetur sit. Eu laborum culpa veniam esse incididunt officia est irure eu esse dolore dolore deserunt qui. Ut ex aliqua nisi anim aliquip ullamco consectetur voluptate.&mldr;</div><a href=/posts/primer-post/>Read more ⟶</a></section></main><footer><hr><a class=soc href=https://github.com/carlosmanri title=GitHub><i data-feather=github></i></a>|<a class=soc href=https://www.linkedin.com/in/carlos-manrique-enguita/ title=LinkedIn><i data-feather=linkedin></i></a>|<a class=soc href=mailto:cmanriqueenguita@gmail.com title=Mail><i data-feather=mail></i></a>|<a class=soc href=mailto:UO258425@uniovi.es title=Mail><i data-feather=mail></i></a>|<a class=soc href=mailto:carlos@manrique.dev title=Mail><i data-feather=mail></i></a>|⚡️
+2022 © Carlos Manrique Enguita | <a href=https://github.com/athul/archie>Archie Theme</a> | Built with <a href=https://gohugo.io>Hugo</a></footer><script>feather.replace()</script></div></body></html>
